--- a/nickname.html
+++ b/nickname.html
@@ -22,6 +22,7 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
+
         input[type=submit] {
             font-family: 'Courier New', Courier, monospace;
             width: 100%;
@@ -33,6 +34,7 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        
         div{
             width: 450px;
             padding: 8px;
@@ -49,7 +51,7 @@
     <div class="container">
         <form id="form" action="">
             <label for="name">Nickname</label>
-            <input type="text" name="nickname" placeholder="Nickname">
+            <input type="text" name="nickname">
     
             <label for="colour">Colour</label>
             <select id="colour" name="colour">
