--- a/chat.html
+++ b/chat.html
@@ -10,21 +10,22 @@
         <ul id="messages"></ul>
       </div>
         
-      <form id="form" action="">
+        <form id="form" action="">
           <input id="input" autocomplete="off" /><button>Send</button>
         </form>
       
 
       <div class="userList">
         <h1>Online Users</h1>
+        <ul id="online"></ul>
       </div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
-      var form = document.getElementById('form');
-      var input = document.getElementById('input');
+        var form = document.getElementById('form');
+  var input = document.getElementById('input');
 
 form.addEventListener('submit', function(e) {
     e.preventDefault();
@@ -34,13 +35,32 @@ form.addEventListener('submit', function(e) {
             }
         });
 
-        socket.on('chat message', function(msg) {
+
+        socket.on('user connect', function(msg) {
             var item = document.createElement('li');
             item.textContent = msg;
             messages.appendChild(item);
             window.scrollTo(0,document.body.scrollHeight);
         });
 
+        socket.on('user list', function(name) {
+          var item = document.createElement('li');
+          item.textContent = name;
+          online.appendChild(item);
+        });
+
+        socket.on('chat message', function(data) {
+            var item = document.createElement('li');
+            var name = document.createElement("span");
+            var message = document.createElement("span");
+            name.textContent = "[" + data.name + "]";
+            name.style.color = data.colour;
+            message.textContent = " " + data.msg;
+            item.appendChild(name);
+            item.appendChild(message);
+            messages.appendChild(item);
+            window.scrollTo(0,document.body.scrollHeight);
+        });
     </script>
 
   </body>
