--- a/chat.html
+++ b/chat.html
@@ -7,10 +7,10 @@
   <body>
     <div class="chat">
       <div class="chatbox">
-        <ul id="messages"></ul>
+        <ul id="messages">
+        </ul>
       </div>
 
-      
         <form id="form" action="">
           <input type="color" id="changeColour" name="colour">
           <input id="input" autocomplete="off" /><button>Send</button>
@@ -74,15 +74,16 @@
 
         socket.on('chat message', function(data) {
             var item = document.createElement('li');
-            var message = document.createElement("span");
+            //var message = document.createElement("span");
+            var date = document.createElement("span");
 
-            message.textContent = data.name + ": " + data.msg;
-            //message.style.color = data.colour;
-
-            item.appendChild(message);
+            item.textContent = data.name + ": " + data.msg;
             item.style.backgroundColor = data.colour;
 
+            date.textContent = data.date;
+
             messages.appendChild(item);
+            messages.appendChild(date);
 
             window.scrollTo(0,document.body.scrollHeight);
         });
