placeholders + more default names + cleanup

--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
 
         <form id="form" action="">
           <input type="color" id="changeColour" name="colour">
-          <input id="input" autocomplete="off" /><button>Send</button>
+          <input id="input" autocomplete="off" placeholder="Enter your message here..."/><button>Send</button>
         </form>
       
 
